# advanced-python-feb-23

./: chatgpt.md  readme.md
Code/00-Basics/: 1-strings.py  2-functions.py  3-variadic.py  4-lists.py  5-dicts.py  6-by-value-or-ref.py  7-sorted-dict.py
Code/01-OOP/: accounting.py  client.py
Code/02-MoreOOP/: 1-manageattributes.py  2-addremoveattributes.py  3-builtinattributes.py  4-magicmethods.py  5-inheritance.py  accounting.py
Code/03-fp/: 1-function.py  10-partials.py  2-passing-lambdas.py  3-returning-lambda.py  4-closures1.py  5-closures2.py  6-recursive.py  7-tail-recursion.py  8-functools.py  9-partialfunctions.py
Code/04-async/: 1-multipleThreads.py  2-asyncio-sleep.py  3-asyncio-with-cancel copy.py  4-async-for-in.py
Code/05-pythonweb/: pyproject.toml  webserver.py
Code/05-pythonweb/1-webserver/Breakout/: Ball.js  Styles.css  index.html
Code/05-pythonweb/1-webserver/Catch/: Sprite.js  index.html
Code/05-pythonweb/1-webserver/Snooker/: Ball.js  BallBehaviour.js  Sprite.js  Styles.css  TablePainter.js
Code/05-pythonweb/2-rest-server/: client.py  server.py
Code/05-pythonweb/3-WebSockets/: client.html  client.py  server.py
Code/05-pythonweb/Breakout/: Breakout.js  Brick.js  Sprite.js
Code/05-pythonweb/Catch/: Ball.js  Bucket.js  CatchIt.css  CatchIt.js  GameController.js
Code/05-pythonweb/Catch/images/: Thumbs.db
Code/05-pythonweb/Snooker/: BallPainter.js  Table.js  index.html
Code/06-flask/: pyproject.toml
Code/06-flask/1-hello-world/: app.py
Code/07-mongo/: 1-connect.py  2-getDatabases.py  3-getCollections.py  4-createDocuments.py  5-readDocuments.py  6-updateDocuments.py  7-deleteDocuments.py
Code/08-numpy/: 1-array.py  10-concat-multi.py  11-stack-array.py  12-splitting-an-array.py  2-read-csv.py  3-visualize.py  4-index-into-array.py  5-slice-array.py  6-accessing-elements.py  7-reshape.py  8-new-axis.py  9-concat.py  WorldCupWinners.csv  pyproject.toml
Code/09-numpy-techniques/: 1-using-a-loop.py  10-complex-broadcasting.py  11-boolean-operations.py  12-boolean-aggregation.py  13-boolean-masking.py  14-fancy-indexing.py  15-partition.py  2-arithmetic.py  3-reduce-and-accumulate.py  4-trig-function.py  5-numpy-vs-python.py  6-aggregation-functions.py  8-ufunc-scal-array.py  (+3 more)
Labs/Student/12-TestingWithPyTest/: LICENSE  config.py  pyproject.toml
Labs/Student/12-TestingWithPyTest/project/: models.py
Labs/Student/12-TestingWithPyTest/project/users/: forms.py  routes.py
Labs/Student/12-TestingWithPyTest/project/users/templates/users/: status.html
Labs/Student/12-TestingWithPyTest/tests/: conftest.py
Labs/Student/12-TestingWithPyTest/tests/functional/recipes/: test_routes.py
(+113 files in other folders)
