[tool.poetry]
name = "06-flask"
version = "0.1.0"
description = ""
authors = ["Kevin Cunningham <github@kevincunningham.co.uk>"]
readme = "README.md"
packages = [{include = "06_flask"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
requests = "^2.28.2"
pymongo = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
