[tool.poetry]
name = "08-numpy"
version = "0.1.0"
description = ""
authors = ["Kevin Cunningham <github@kevincunningham.co.uk>"]
readme = "README.md"
packages = [{include = "08_numpy"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
