[tool.poetry]
name = "flask-user-management"
version = "0.1.0"
description = ""
authors = ["Kevin Cunningham <github@kevincunningham.co.uk>"]
readme = "README.md"
packages = [{include = "flask_user_management"}]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "22.1.0"
bandit = "1.7.4"
certifi = "2022.9.24"
charset-normalizer = "2.1.1"
click = "8.1.3"
coverage = "6.5.0"
dnspython = "2.2.1"
dparse = "0.6.2"
email-validator = "1.3.0"
flake8 = "5.0.4"
flask = "2.2.2"
flask-login = "0.6.2"
flask-sqlalchemy = "2.5.1"
flask-wtf = "1.0.1"
gitdb = "4.0.9"
gitpython = "3.1.27"
greenlet = "1.1.3"
gunicorn = "20.1.0"
idna = "3.4"
iniconfig = "1.1.1"
isort = "5.10.1"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
markupsafe = "2.1.1"
mccabe = "0.7.0"
packaging = "21.3"
pbr = "5.10.0"
pluggy = "1.0.0"
psycopg2 = "2.9.3"
psycopg2-binary = "2.9.3"
py = "1.11.0"
pycodestyle = "2.9.1"
pyflakes = "2.5.0"
pyparsing = "3.0.9"
pytest = "7.1.3"
pytest-cov = "4.0.0"
pyyaml = "6.0"
requests = "2.28.1"
ruamel-yaml = "0.17.21"
ruamel-yaml-clib = "0.2.6"
safety = "2.2.0"
smmap = "5.0.0"
sqlalchemy = "1.4.41"
stevedore = "4.0.0"
toml = "0.10.2"
tomli = "2.0.1"
urllib3 = "1.26.12"
werkzeug = "2.2.2"
wtforms = "3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
